Expand all and collapse all buttons. Fix lots of weird state issues. Need refactor eventually...

--- a/src/site/client/assets/styles/home/bottom-bar.scss
+++ b/src/site/client/assets/styles/home/bottom-bar.scss
@@ -5,7 +5,7 @@
   flex-grow: 1;
 
   .bottom-bar {
-    border: $border;
+    border-top: $border;
     height: 400px;
     display: flex;
     flex-direction: column;
